Move to ant/log4j.properties at WARN
The log output was 4MB+ which caused travis
to error out. Reducing this my having a second
test-only log4j.properties file.

--- a/components/loci-plugins/pom.xml
+++ b/components/loci-plugins/pom.xml
@@ -91,7 +91,7 @@
         <artifactId>maven-surefire-plugin</artifactId>
         <configuration>
           <additionalClasspathElements>
-            <additionalClasspathElement>${basedir}/../../tools/</additionalClasspathElement>
+            <additionalClasspathElement>${basedir}/../../ant/</additionalClasspathElement>
           </additionalClasspathElements>
         </configuration>
       </plugin>
