--- a/components/ome-xml/pom.xml
+++ b/components/ome-xml/pom.xml
@@ -72,7 +72,7 @@
             <suiteXmlFile>test/ome/xml/utests/testng.xml</suiteXmlFile>
           </suiteXmlFiles>
           <additionalClasspathElements>
-            <additionalClasspathElement>${basedir}/../../tools/</additionalClasspathElement>
+            <additionalClasspathElement>${basedir}/../../ant/</additionalClasspathElement>
           </additionalClasspathElements>
         </configuration>
       </plugin>
