--- a/components/loci-legacy/pom.xml
+++ b/components/loci-legacy/pom.xml
@@ -96,7 +96,7 @@
             <suiteXmlFile>test/loci/common/utests/testng-template.xml</suiteXmlFile>
           </suiteXmlFiles>
           <additionalClasspathElements>
-            <additionalClasspathElement>${basedir}/../../tools/</additionalClasspathElement>
+            <additionalClasspathElement>${basedir}/../../ant/</additionalClasspathElement>
           </additionalClasspathElements>
         </configuration>
       </plugin>
