--- a/components/scifio-devel/pom.xml
+++ b/components/scifio-devel/pom.xml
@@ -82,7 +82,7 @@
             <suiteXmlFile>test/ome/scifio/io/utests/testng-template.xml</suiteXmlFile>
           </suiteXmlFiles>
           <additionalClasspathElements>
-            <additionalClasspathElement>${basedir}/../../tools/</additionalClasspathElement>
+            <additionalClasspathElement>${basedir}/../../ant/</additionalClasspathElement>
           </additionalClasspathElements>
         </configuration>
       </plugin>
