--- a/components/scifio/pom.xml
+++ b/components/scifio/pom.xml
@@ -104,7 +104,7 @@
             <suiteXmlFile>test/loci/formats/utests/testng.xml</suiteXmlFile>
           </suiteXmlFiles>
           <additionalClasspathElements>
-            <additionalClasspathElement>${basedir}/../../tools/</additionalClasspathElement>
+            <additionalClasspathElement>${basedir}/../../ant/</additionalClasspathElement>
           </additionalClasspathElements>
         </configuration>
       </plugin>
