Updated build files as first step of See #10440

--- a/components/specification/build.xml
+++ b/components/specification/build.xml
@@ -218,7 +218,7 @@
         <echo message="Sample OME-XML files validated."/>
     </target>
 
-    <target name="clean" description="Cleans the published schemas">
+    <target name="clean" description="Cleans the published schemas and specification jar">
         <delete dir="published"/>
         <delete dir="${target.dir}"/>
     </target>
