--- a/ant/toplevel.properties
+++ b/ant/toplevel.properties
@@ -18,7 +18,6 @@ merged-docs.classpath = ${lib.dir}/forms-1.3.0.jar:\
                         ${lib.dir}/omero_client.jar:\
                         ${lib.dir}/slf4j-api-1.5.10.jar:\
                         ${lib.dir}/slf4j-log4j12-1.5.10.jar:\
-                        ${lib.dir}/turbojpeg-1.2.1.jar:\
                         ${lib.dir}/testng-6.8.jar:\
                         ${lib.dir}/assumeng-1.2.3.jar:\
                         ${lib.dir}/perf4j-0.9.13.jar
@@ -65,7 +64,7 @@ loci-tools.libraries = bio-formats.jar \
                        serializer-2.7.1.jar \
                        scifio.jar \
                        scifio-devel.jar \
-                       turbojpeg-1.2.1.jar \
+                       turbojpeg.jar \
                        xalan-2.7.1.jar \
                        slf4j-api-1.5.10.jar \
                        slf4j-log4j12-1.5.10.jar \
