--- a/components/scifio/pom.xml
+++ b/components/scifio/pom.xml
@@ -55,6 +55,16 @@
       <version>${project.version}</version>
     </dependency>
     <dependency>
+      <groupId>${project.groupId}</groupId>
+      <artifactId>turbojpeg</artifactId>
+      <version>${project.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>org.scijava</groupId>
+      <artifactId>native-lib-loader</artifactId>
+      <version>2.0-SNAPSHOT</version>
+    </dependency>
+    <dependency>
       <groupId>com.jgoodies</groupId>
       <artifactId>forms</artifactId>
       <version>1.2.1</version>
