--- a/components/specification/build.properties
+++ b/components/specification/build.properties
@@ -5,7 +5,14 @@
 component.name           = specification
 component.jar            = specification.jar
 component.version        = 4.5-DEV
-component.classpath      = 
+component.classpath      = ${artifact.dir}/specification.jar:\
+                           ${artifact.dir}/bio-formats.jar:\
+                           ${lib.dir}/junit-4.8.2.jar:\
+                           ${lib.dir}/slf4j-api-1.5.10.jar:\
+                           ${lib.dir}/slf4j-log4j12-1.5.10.jar:\
+                           ${lib.dir}/log4j-1.2.15.jar:\
+                           ${lib.dir}/testng-6.8.jar:
+
 
 component.java-version   = 1.5
 component.deprecation    = true
