--- a/components/autogen/build.properties
+++ b/components/autogen/build.properties
@@ -24,6 +24,8 @@ component.resources-text = *.txt \
                            *.sh
 
 component.main-class     = MetaSupportAutogen
-component.runtime-cp     = ${component.classpath}
+component.runtime-cp     = ${component.classpath}:\
+                           ${lib.dir}/slf4j-log4j12-1.5.10.jar:\
+                           ${lib.dir}/log4j-1.2.15.jar
 
 component.meta-support-dir = ${root.dir}/components/bio-formats
