--- a/components/scifio/build.properties
+++ b/components/scifio/build.properties
@@ -17,7 +17,7 @@ component.classpath      = ${artifact.dir}/jai_imageio.jar:\
                            ${artifact.dir}/turbojpeg.jar:\
                            ${lib.dir}/forms-1.3.0.jar:\
                            ${lib.dir}/native-lib-loader-2.0-SNAPSHOT.jar:\
-                           ${lib.dir}/kryo-debug-2.21-all.jar:\
+                           ${lib.dir}/kryo-2.21-shaded.jar:\
                            ${lib.dir}/perf4j-0.9.13.jar:\
                            ${lib.dir}/slf4j-api-1.5.10.jar:\
                            ${lib.dir}/testng-6.8.jar
