--- a/components/scifio/pom.xml
+++ b/components/scifio/pom.xml
@@ -70,9 +70,24 @@
       <version>1.2.1</version>
     </dependency>
     <dependency>
-      <groupId>com.esotericsoftware.kryo</groupId>
-      <artifactId>kryo</artifactId>
-      <version>2.21</version>
+     <groupId>com.esotericsoftware.kryo</groupId>
+     <artifactId>kryo</artifactId>
+     <version>2.21</version>
+     <classifier>shaded</classifier>
+       <exclusions>
+         <exclusion>
+           <groupId>com.esotericsoftware.reflectasm</groupId>
+           <artifactId>reflectasm</artifactId>
+         </exclusion>
+         <exclusion>
+           <groupId>com.esotericsoftware.minlog</groupId>
+           <artifactId>minlog</artifactId>
+         </exclusion>
+         <exclusion>
+           <groupId>org.objenesis</groupId>
+           <artifactId>objenesis</artifactId>
+         </exclusion>
+      </exclusions>
     </dependency>
     <dependency>
       <groupId>org.perf4j</groupId>
